CSS/style.css
.w-custom {
    width: 60%;
    padding: 4%;
    background-color: black;
}

body {
    background-color: rgb(1, 14, 1);
}

p, h3 {
    text-shadow: 1px 1px 3px black;
}

.custom-bg {
    background-color: rgba(36, 35, 35, 0.4)!important;
}

